Archive2/8d/0ab057b0d0dfb8/output
main.cpp:8:5: error: static_assert failed "Error!"
    static_assert(std::is_same<T, const int>::value, "Error!");
    ^             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
main.cpp:20:22: note: in instantiation of function template specialization 'bar<int>' requested here
    void(*pf)(int) = bar;
                     ^
1 error generated.
